<?xml version="1.0"?>
<package format="2">

    <name>zeabus_library</name>
    <version>0.0.0</version>
    <description>This package use in zeabus team manage and collect most library for use</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
