<?xml version="1.0"?>
<package format="2">

    <name>zeabus_library</name>
    <version>0.0.0</version>
    <description>This package use in zeabus team manage and collect most library for use</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>Boost</build_depend>
    <exec_depend>Boost</exec_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>zeabus_utility</build_depend>
    <exec_depend>zeabus_utility</exec_depend>

    <build_depend>tf</build_depend>
    <exec_depend>tf</exec_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend>

</package>
